	* Update stuff
kobra_k88
	* Optimize WoE
Shinigami
	* Organizing/Optmizing/Checking for Typo in all NPCs.
Mass Zero
	* Novice Training Ground.
	* (Probably unofficial) Lou Yang NPC's, mobs, etc...

MC Cameri
	* Bank NPC - Now 100% done for new payon
	* Warper NPC - 100%, fixed memory consumption problem
	* Heal NPC - 100%

Other Ppl	
	* Their Work?

== Changelog ==

Date		Added
======

03/07
        * Fixed a typo in high mage job changing, thanks to hongmei [celest]

03/03
	* Fixed Moving HP skill quest

02/28
	* warps/louyang.txt: Added 2 escapes from 2 mountains 018,019 [Lupus]
	  Some players used to stuck there after warps

02/27
	* Fixed some bugs in Monk Job Quest. Now it's fully passable. [Lupus]
	  Going to brush it up a bit later. First have to re-check Crusader+Assassin+Rogue quests ^_-
02/26
	* Now players can reach Guilds Dungeons only trough their own captured castles. [Lupus]
		Before they coulkd enter the dungeons vie unoccupied castles. Thanks 2Ishizu-chan for fix
02/16
	* Fixed 1 payon castle guardian spawn coords
	* Fixed Wootan and Beetle King names in the spawn files [Lupus]
        * Fixed a typo in quests/all_quest.txt, thanks to hongmei [celest]
        * Fixed treasure chests spawn in the castles. (had to simplify some code and unroll some loops) [Lupus]

02/13
        * Added midas's fixes for bugs in the novice training ground and the custom
          jobchanger script [celest]

10/02
        * Fixed Wizard job quest (made only one agressive mob in the last room) [Lupus]

01/10
        * Fixed some typos and exploits in the Blacksmith and Hunter job quest,
          thanks to Riotblade and nonox
01/09/05
	* Modified guild war scripts to fix a bug for duplicate guild storages. [Codemaster & Ajarn]
8/1
        * Added the new Yuno field warps by Sara-chan [celest]

2/1
        * Added missing Spore Doll to the Kaho Horns NPC (God... this was reported
          months ago)